# df-legends

./: .commit_msg.txt  .dockerignore  .env.example  .gitignore  AGENTS.md  ATTEMPTS.md  FUNCTIONS.md  README.md  docker-compose.yml
tools/df-save-re/: .dockerignore  Dockerfile  HANDOVER.md  README.md  alembic.ini  pyproject.toml
tools/df-save-re/alembic/: env.py
tools/df-save-re/df_save_re/: __init__.py  binary_reader.py  cli.py  compression.py  hexdump.py  legends_exports.py  legends_extract.py  legends_oracle.py  legends_scan.py  legends_text.py  legends_verify.py  legends_xml.py  save_bundle.py  save_preamble.py  save_validate.py  scan.py  target.py
tools/df-save-re/docs/: binary-re-findings-0.47.05.md  coverage-matrix.md  execution-progress.md  histfig_info_fields.md  legends-db-schema.md
tools/df-save-re/ghidra_decompiles/: 140002020.c  140002090.c  1400020a0.c  140002140.c  1400021b0.c  140002250.c  1400022c0.c  1400022f0.c  140002380.c  140002460.c  1400025a0.c  1400025c0.c  140002600.c  140002620.c  140002660.c  1400026e0.c  140002740.c  1400027e0.c  1400028e0.c  140002a30.c  140002ca0.c  140002d90.c  140002e40.c  140002f20.c  140002fc0.c  1400030c0.c  1400031f0.c  1400032c0.c  140003800.c  1400039b0.c  140003b10.c  140003cd0.c  140003d70.c  140003ec0.c  140004110.c  140004470.c  140004650.c  1400046c0.c  1400047c0.c  140004830.c  (+2742 more)
tools/df-save-re/ghidra_scripts/: DecompileCallTree.java  DecompileTargets.java  DecompileWithCallees.java  EnumerateEventVtables.java  EnumerateFactoryVtables.java  FindCallers.java  FindHistfigLikeReaders.java  README.md  (+17 more)
(+475 files in other folders)
