[project]
name = "df-save-re"
version = "0.1.0"
description = "Dwarf Fortress save reverse-engineering tools (Path C)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
]

[project.scripts]
df-save-re = "df_save_re.cli:main"

[project.optional-dependencies]
test = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["df_save_re*"]

[tool.setuptools.package-data]
"df_save_re.web" = ["templates/*.html", "static/*"]
